Fixed small display bug

--- a/TPC1/ruaSite/rua_Praça_do_Pão.html
+++ b/TPC1/ruaSite/rua_Praça_do_Pão.html
@@ -96,7 +96,7 @@
                 <td class="w3-col m2">2</td>
                 <td class="w3-col m2">José Gomes Ferraz</td>
                 <td class="w3-col m2">480 reis e 2 galinhas</td>
-                <td class="w3-col m6">None</td>
+                <td class="w3-col m6"></td>
             </tr>
         
             <tr class="w3-row w3-light-grey">
