--- a/TPC1/ruaSite/rua_Rua_dos_Açougues_velhos.html
+++ b/TPC1/ruaSite/rua_Rua_dos_Açougues_velhos.html
@@ -87,8 +87,8 @@
                     
             <tr class="w3-row w3-light-grey">
                 <td class="w3-col m2">1</td>
-                <td class="w3-col m2">None</td>
-                <td class="w3-col m2">None</td>
+                <td class="w3-col m2"></td>
+                <td class="w3-col m2"></td>
                 <td class="w3-col m6">Corresponde à casa nº16 da Praça do Pão para onde tem a frontaria e serventia principais.</td>
             </tr>
         
