--- a/TPC1/ruaSite/rua_Cangosta_da_Escoura.html
+++ b/TPC1/ruaSite/rua_Cangosta_da_Escoura.html
@@ -271,14 +271,14 @@
                 <td class="w3-col m2">27</td>
                 <td class="w3-col m2"></td>
                 <td class="w3-col m2"></td>
-                <td class="w3-col m6">Pertence ao n.º 23 da Rua dos Chãos de Cima</td>
+                <td class="w3-col m6">Pertence ao n.º 23 da</td>
             </tr>
         
             <tr class="w3-row w3-light-grey">
                 <td class="w3-col m2">28</td>
                 <td class="w3-col m2"></td>
                 <td class="w3-col m2"></td>
-                <td class="w3-col m6">Pertence ao n.º 22 da Rua dos Chãos de Cima</td>
+                <td class="w3-col m6">Pertence ao n.º 22 da</td>
             </tr>
         
             <tr class="w3-row w3-light-grey">
