--- a/TPC1/ruaSite/rua_Travessa_da_Rua_de_S._João_para_a_do_Forno.html
+++ b/TPC1/ruaSite/rua_Travessa_da_Rua_de_S._João_para_a_do_Forno.html
@@ -133,7 +133,7 @@
                 <td class="w3-col m2">7</td>
                 <td class="w3-col m2">Félix José Machado</td>
                 <td class="w3-col m2">420 e 4 galinhas</td>
-                <td class="w3-col m6">Encontram-se unidos a este prazo os n.º 10 e 11 da Rua do Forno, desde o ano de 1596</td>
+                <td class="w3-col m6">Encontram-se unidos a este prazo os n.º 10 e 11 da Rua do Forno, desde o ano de</td>
             </tr>
         
             <tr class="w3-row w3-light-grey">
