--- a/TPC1/ruaSite/rua_Rua_Verde.html
+++ b/TPC1/ruaSite/rua_Rua_Verde.html
@@ -119,7 +119,7 @@
                 <td class="w3-col m2">5, 6 e 7</td>
                 <td class="w3-col m2">António Pereira, sapateiro</td>
                 <td class="w3-col m2">100 reis e 1 galinha</td>
-                <td class="w3-col m6"><p>O enfiteuta é filho de Teresa da Costa e de seu marido António Pereira.</p><p>Encontram-se situadas junto ao postigo de S. Sebastião e foram construídas, antes de 1563, no «lugar do Sabugal», pertencente ao n.º 12 da Rua de Sto. António.</p></td>
+                <td class="w3-col m6"><p>O enfiteuta é filho de Teresa da Costa e de seu marido António Pereira.</p><p>Encontram-se situadas junto ao postigo de S. Sebastião e foram construídas, antes de 1563, no «lugar do Sabugal», pertencente ao n.º 12 da</p></td>
             </tr>
         
             <tr class="w3-row w3-light-grey">
