--- a/TPC1/ruaSite/rua_Rua_dos_Biscaínhos.html
+++ b/TPC1/ruaSite/rua_Rua_dos_Biscaínhos.html
@@ -82,7 +82,7 @@
                 <td class="w3-col m2">1</td>
                 <td class="w3-col m2">Sebastião de Faria Gusmão, enfiteuta principal da Quinta da Cónega.</td>
                 <td class="w3-col m2"></td>
-                <td class="w3-col m6">Os herdeiros do Lic. Domingos Correia de Abreu pagam 150 reis e 2 alqueires e meio de trigo ao enfiteuta do prazo da Quinta da Cónega</td>
+                <td class="w3-col m6">Os herdeiros do Lic. Domingos Correia de Abreu pagam 150 reis e 2 alqueires e meio de trigo ao enfiteuta do prazo da</td>
             </tr>
         
             <tr class="w3-row w3-light-grey">
